# openapi-client-go

./: .gitignore  404.html  CODE_OF_CONDUCT.md  Makefile  README.md  go.mod  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md  labeler.yml
.github/workflows/: test.yml
api/: index.html
docs/api/: index.md
docs/sandbox/: index.md
openapi/api/: api_audit_log.go  api_auth.go  api_billing.go  api_cell_location.go  api_credential.go  api_data_entry.go  api_device.go  api_device_object_model.go  api_diagnostic.go  api_email.go  api_event_handler.go  api_file_entry.go  api_files.go  api_gadget.go  api_group.go  api_lagoon.go  api_log.go  api_lora_device.go  api_lora_gateway.go  api_lora_network_set.go  api_operator.go  api_order.go  api_payment.go  api_port_mapping.go  api_query.go  api_role.go  api_shipping_address.go  api_sigfox_device.go  api_sim.go  api_soralet.go  api_stats.go  api_subscriber.go  api_system_notification.go  api_user.go  api_virtual_private_gateway.go  client.go  configuration.go  model_action_config.go  model_action_config_property.go  model_air_stats_response.go  (+253 more)
openapi/sandbox/: api_coupon.go  api_operator.go  api_order.go  api_stats.go  api_subscriber.go  client.go  configuration.go  model_sandbox_auth_response.go  model_sandbox_beam_counts.go  model_sandbox_create_coupon_request.go  model_sandbox_create_coupon_response.go  model_sandbox_create_subscriber_request.go  model_sandbox_create_subscriber_response.go  model_sandbox_init_request.go  (+10 more)
sandbox/: index.html
search/: search_index.json
specs/: api.yaml  sandbox.yaml
(+4 files in other folders)
