[tool.poetry]
name = "openapi-client-go"
version = "0.0.1"
description = "SORACOM API client for Go based on OpenAPI Generator"
authors = ["Soracom, Inc."]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
